# boinc-client

./: .all-contributorsrc  .gitignore  CONTRIBUTING.md  Makefile  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: endpoint-request.md
.github/workflows/: pull-request.yml  release-note.yml  tagging.yml  test-and-release.yml  test.yml
docs/: project.md  unauthorised.md
src/boinc_client/: __init__.py  boinc_client.py  messages.py  modes.py  preferences.py  projects.py  results.py  stats.py  status.py  versions.py
src/boinc_client/clients/: rpc_client.py
src/boinc_client/models/: additional_fields.py  cc_status.py  client_state.py  client_update.py  client_version.py  disk_stats.py  file_transfer.py  generic_response.py  global_preference_override.py  global_preferences.py  helpers.py  host_info.py  message.py  message_count.py  messages.py  network_transfers.py  old_results.py  project_attach.py  project_list.py  project_state.py  project_status.py  projects.py  projects_stats.py  public_notice.py  result.py  screensaver_tasks.py  simple_gui_info.py
src/pyboinc/: __init__.py  messages.py  projects.py  pyboinc.py  reports.py  results.py  stats.py  status.py  versions.py
src/pyboinc/models/: client_update.py  client_version.py  message_count.py  project_list.py
tests/: conftest.py  test_boinc_client.py  test_pyboinc.py
tests/clients/: test_rpc_client.py
tests/integration/: conftest.py  test_boinc_client.py  test_pyboinc.py
tests/messages/: conftest.py  test_messages.py  test_models.py
tests/models/: test_message.py  test_message_count.py  test_public_notice.py
tests/modes/: test_modes.py
tests/preferences/: conftest.py  test_preferences.py
tests/projects/: conftest.py  test_models.py  test_projects.py
tests/reports/: conftest.py  test_reports.py
tests/results/: conftest.py  test_results.py
tests/stats/: conftest.py  test_stats.py
tests/status/: conftest.py  test_status.py
tests/test_files/cc_status/: basic_cc_status.xml
tests/test_files/client_state/: entire_state.xml  multi_projects_no_results.xml  no_projects_no_results.xml  project_attach_weak_key.xml  short_client_state.xml
tests/test_files/disk_stats/: multiple_project_disk_stats.xml  no_project_disk_stats.xml  single_project_disk_stats.xml
tests/test_files/file_transfers/: multi_file_transfer.xml  no_file_transfers.xml  single_file_transfer.xml
tests/test_files/global_preferences/: global_prefs.xml  global_prefs_override.xml
tests/test_files/host_info/: host_info_no_coprocs.xml  host_info_no_cpu_detail.xml  (+1 more)
tests/versions/: conftest.py  test_models.py  test_versions.py
(+42 files in other folders)
