[tool.poetry]
name = "boinc-client"
version = "0.18.6"
description = "Python API for interacting with a BOINC client via RPC"
authors = ["Lewis England"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
xmltodict = "^0.13.0"

[tool.poetry.group.dev.dependencies]
black = "^22.12.0"
isort = "^5.11.4"
pytest = "^7.2.1"
pytest-cov = "^4.0.0"
pytest-mock = "^3.10.0"
testcontainers-core = "^0.0.1rc1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
markers = [
    "integration: Integration tests that run against a containerised BOINC client"
]